# VVConvert

./: .gitignore  LICENSE.txt  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: about.html  ffmpeg.html  ffmpeg.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lib/: libvvenc.1.11.1.dylib  libvvenc.1.11.dylib  libvvenc.1.9.1.dylib  libvvenc.1.9.dylib  libvvenc.dylib  libvvenc.so.1.11  libvvenc.so.1.9  vvenc.lib
src-tauri/lib/vvenc/: version.h  vvenc.h  vvencCfg.h
src-tauri/src/: ffmpeg_utils.rs  main.rs
src-tauri/wix/: registry.wxs
