[package]
name = "vvconvert"
version = "0.0.6"
description = "VVConvert"
authors = ["Alec Carter"]
license = ""
repository = "https://github.com/alectr0/VVConvert"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
bindgen = "0.69.1"

[dependencies]
tauri = { version = "1.5.2", features = [ "updater", "http-all", "shell-sidecar", "protocol-all", "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.151"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
zip = "0.6.6"
tokio = { version = "1.35.0", features = ["full"] }
which = "5.0.0"
futures = "0.3.29"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
